--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,28 @@
+:root{
+  --primary-color: #1F5C46;
+  --secondary-color: #90E1C4;
+  --alternative-color: #4BDBA6;
+  --gray-primary: #505959 ;
+  --gray-secondary: #95A6A4;
+  --gray-alternative: #C4DAD8;
+}
+
+*{
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  font-family: Oswald, -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  max-width: 100vw;
+  max-height: 100vh;
+  background-color: var(--gray-alternative);
 }
 
 code {
